--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               necessitatibus blanditiis ipsam atque! Debitis vitae soluta
               suscipit facilis id numquam ratione perspiciatis dolorem?
             </p>
-            <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#modalEnroll">Start The Enrollment</button>
+            <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#modalEnroll">Testing The Enrollment</button>
           </div>
           <img
             class="img-fluid w-50 d-none d-sm-block"
