--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 Laudantium consequuntur soluta reprehenderit facere!
               </p>
               <a href="#" class="btn btn-light mt-3"
-                >Read More
+                >Read More...
                 <span><i class="bi bi-chevron-right" id="chev"></i></span
               ></a>
             </div>
