--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="input-group mb-3">
                 <label class="input-group-text bg-secondary-subtle text-dark" for="Age">Age:</label>
                 <input type="text" class="form-control" id="Age
-                ">
+                " placeholder="Age">
               </div>
               <div class="input-group mb-3">
                 <label class="input-group-text bg-secondary-subtle text-dark" for="Email">Email:</label>
