--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
           <img
             class="img-fluid w-50 d-none d-sm-block"
-            src="/showcase.svg"
+            src="./showcase.svg"
             alt="showcase"
           />
         </div>
@@ -196,7 +196,7 @@
         <div class="row justify-content-between align-items-center">
           <div class="col-md d-none d-sm-block">
             <img
-              src="/fundamentals.svg"
+              src="./fundamentals.svg"
               alt="fundamentals"
               class="img-fluid"
             />
@@ -246,7 +246,7 @@
             </div>
             <div class="col-md d-none d-sm-block">
               <img
-                src="/react.svg"
+                src="./react.svg"
                 alt="ReactJs"
                 class="img-fluid"
               />
