--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
                 </div>
                 <h4 class="card-title">In person</h4>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Praesentium, quos?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. In soluta ad maiores veniam modi atque.
                 </p>
                 <a href="#" class="btn btn-primary">Read more...</a>
               </div>
@@ -204,9 +203,7 @@
           <div class="col-md p-4">
             <div class="h2">Learn The Fundaments</div>
             <p class="lead">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-              delectus qui quia error id? Ad tempore unde inventore. Itaque,
-              cumque.
+              Be trained with the right amound and right learning with us. Join us to learn more about the basics of HTML, CSS and JavaScript.
             </p>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero
