--- a/index.html
+++ b/index.html
@@ -206,10 +206,7 @@
               Be trained with the right amound and right learning with us. Join us to learn more about the basics of HTML, CSS and JavaScript.
             </p>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero
-              iure animi exercitationem tempora quam voluptas nobis corrupti,
-              expedita nihil ad, dignissimos quis inventore quod reiciendis!
-              Laudantium consequuntur soluta reprehenderit facere!
+              With the powerful approach to the basic web development like HTML, CSS and JavaScript the learners will familiar and learns basic to the advance ways to design, create and develop websites
             </p>
             <a href="#" class="btn btn-dark mt-3"
               >Read More
